--- a/templates/payments/process_payment.html
+++ b/templates/payments/process_payment.html
@@ -345,10 +345,13 @@
                         
                         <!-- Method-specific details -->
                         <div id="mpesaDetails" class="method-details">
-                            <h6><i class="fas fa-mobile-alt text-success me-2"></i>M-Pesa Details</h6>
-                            <div class="form-floating">
-                                <input type="tel" class="form-control" name="mpesa_phone" placeholder="254712345678">
-                                <label>M-Pesa Phone Number</label>
+                            <h6><i class="fas fa-mobile-alt text-success me-2"></i>M-Pesa Payment</h6>
+                            <div class="alert alert-success">
+                                <i class="fas fa-check-circle me-2"></i>
+                                <strong>Ready to process M-Pesa payment</strong>
+                                <p class="mb-0 mt-2 small">
+                                    Click "Process Payment" below to proceed to M-Pesa payment screen where you'll enter the customer's phone number.
+                                </p>
                             </div>
                         </div>
                         
